# financialModel

./: .gitattributes  .gitignore  LICENSE  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  test_models.py
docs/: AI_Context.md  Architecture.md  DEVELOPMENT.md  Decisions.md  KICKOFF  PROJECT_STATUS.md  Project_charter.md  Project_overview.md  Project_state.md  data_model.md
src/config/: __init__.py  settings.py
src/database/: base.py  database.py  unit_of_work.py
src/dto/: imported_account.py  imported_cash.py  imported_position.py
src/gui/: __init__.py  import_gui.py
src/importers/: bmo_constants.py  bmo_investorline_importer.py  bmo_layout.py  excel_reader.py  imported_account.py  imported_cash.py  imported_position.py  importer.py  worksheet_helper.py
src/models/: account.py  brokerage.py  cash_balance_snapshot.py  company.py  holding.py  holding_snapshot.py  import_record.py  market_price.py
src/repositories/: account_repository.py  brokerage_repository.py  company_repository.py  holding_snapshot_repository.py  import_repository.py  market_price_repository.py  repository_base.py
src/services/: bmo_workbook_import_runner.py  import_result.py  import_result_formatter.py  import_service.py  service_base.py
src/utils/: logger.py
src/validation/: position_validator.py  validator.py
src/web/: __init__.py  import_web_app.py
tests/: conftest.py  entity_factory.py  test_account_repository.py
tests/importers/: conftest.py  test_bmo_investorline_importer.py  test_bmo_layout.py  test_excel_reader.py  test_worksheet_helper.py
(+13 files in other folders)
