# ============================================================
# Davison Financial Model
#
# pyproject.toml
#
# Project configuration for build tools, pytest, Ruff and MyPy.
# ============================================================

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-model"
version = "0.1.0"
description = "Davison Financial Model"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Ron Davison" }
]
dependencies = [
    "sqlalchemy>=2.0",
    "openpyxl>=3.1",
]

# ============================================================
# Pytest
# ============================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v"

# ============================================================
# Ruff
# ============================================================

[tool.ruff]
line-length = 79
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

# ============================================================
# MyPy
# ============================================================

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true